--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve --port 9876",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "dockerize": "docker build -t resume-fe ."
   },
   "dependencies": {
     "core-js": "^3.8.3",
